[gd_scene load_steps=6 format=3 uid="uid://cf6wems303amh"]

[ext_resource type="StyleBox" uid="uid://sugqjf8hn4gk" path="res://art/ButtonStyle.tres" id="1_dj8aq"]
[ext_resource type="Script" uid="uid://dw27mfl60waj5" path="res://scripts/ui.gd" id="1_ro3t7"]
[ext_resource type="Theme" uid="uid://cq5uc11a85s43" path="res://art/ButtonContainerTheme.tres" id="3_5en4g"]
[ext_resource type="StyleBox" uid="uid://bj3abd8vdb802" path="res://art/Buttons.tres" id="4_ua6yw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ro3t7"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 15
border_width_top = 150
border_width_right = 15
border_width_bottom = 150

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ro3t7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuContainer" type="MarginContainer" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -526.0
offset_top = -331.0
offset_right = 526.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0

[node name="MenuPanel" type="Panel" parent="Control/MenuContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_dj8aq")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MenuContainer"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_5en4g")
theme_override_constants/separation = 20

[node name="WoodsButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(63, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Woods
"

[node name="SnowButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
disabled = true
text = "Snow"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_5en4g")

[node name="Menu" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(63, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Menu"

[node name="TabContainer" type="TabContainer" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu"]
visible = false
layout_mode = 0
offset_left = -322.0
offset_top = -518.0
offset_right = 658.0
offset_bottom = -127.0
current_tab = 1

[node name="Stats" type="Control" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Settings" type="Control" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SaveButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Save"

[node name="ResetButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Reset"

[node name="Debug" type="Control" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SpeedButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Speed x1.0"

[node name="SkipButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Skip Hour"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlusHutButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "+1 Hut"

[node name="MinusHutButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "-1 Hut"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_5en4g")
theme_override_constants/separation = 20

[node name="HomeButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
text = "Home"

[node name="CaveButton" type="Button" parent="Control/MenuContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_ua6yw")
disabled = true
text = "Cave"

[node name="Overlay" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Overlay"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ro3t7")

[node name="ClockPanel" type="PanelContainer" parent="Overlay/Panel"]
custom_minimum_size = Vector2(63, 30)
layout_mode = 2
offset_left = 730.0
offset_top = 46.0
offset_right = 923.0
offset_bottom = 115.0
size_flags_vertical = 0
theme = ExtResource("3_5en4g")

[node name="ClockLabel" type="Label" parent="Overlay/Panel/ClockPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer/WoodsButton" to="." method="_on_the_woods_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer/SnowButton" to="." method="_on_section_3_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Settings/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Settings/VBoxContainer/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/HBoxContainer/PlusHutButton" to="." method="_on_plus_hut_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer2/Menu/TabContainer/Debug/VBoxContainer/HBoxContainer/MinusHutButton" to="." method="_on_minus_hut_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer3/HomeButton" to="." method="_on_home_base_pressed"]
[connection signal="pressed" from="Control/MenuContainer/HBoxContainer/VBoxContainer3/CaveButton" to="." method="_on_section_4_button_pressed"]
